--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>this is my first project</h1>
     <h2>look mama,am useing github</h2>
     <h3>its not your mama</h3>
-    <p>lets go foar a party</p>
+    <p>lets go for a party</p>
     <img src="cat.jpg" alt="">
 </body>
 </html>
