learning about second branch

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <h1>this is my first project</h1>
     <h2>look mama,am useing github</h2>
     <h3>its not your mama</h3>
+    <h5>ok I agree with you</h5>
     <p>lets go for a party</p>
+    <p>talking from the second branch</p>
+    <p>This line added in the second branch</p>
     <img src="cat.jpg" alt="">
 </body>
 </html>
