--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <p>lets go for a party</p>
     <p>talking from the second branch</p>
     <p>This line added in the second branch</p>
+    <p>Added a more code in the branch</p>
     <img src="cat.jpg" alt="">
 </body>
 </html>
